SONAR-22038 Support new SSL properties (#10987)
* Move scanner HttpClient code in its own package
* Factorize the computation of the Sonar User Home